# lovable-gympluscoffee-liam

./: .env  .env.example  .gitignore  CLAUDE.md  EDGE_FUNCTION_TEST_REPORT.md  IMPORTANT_NOTE.md  ODOO_DATA_MAPPING_ANALYSIS.md  ODOO_IMPORT_SYSTEM_SUMMARY.md  QA_TESTING_PROTOCOL.md  SUPABASE_MIGRATION_SUMMARY.md  accessibility-test.js  bun.lockb  complete_product_analysis_20250807_174357.json  debug-custom-node.cjs  debug-custom-xml.js  debug-test.html  debug-xml-output.cjs  deploy-all-functions.sh  deploy-edge-functions.sh  deploy-fix.sh  deploy-functions-to-new-project.sh  deploy-supplier-catalog.sh  fix-supplier-catalog.ts  index.html  inventory_analysis_20250807_174323.json  package-lock.json  package.json  prompt.md  tailwind.config.ts  test-complete-supplier-flow.mjs  test-corrected-client.cjs  test-debug-supplier-search.mjs  test-direct-odoo-search.mjs  test-direct-read-call.mjs  test-direct-xml-edge-function.mjs  test-edge-function.cjs  test-edge-functions.js  test-edge-functions.mjs  test-exact-supplier-search.mjs  test-fastpet-supplier.mjs  (+18 more)
coordination/: task_openai_search_feature.md
coverage/: junit.xml
data/: gym_plus_coffee_products.json
docs/: CODE_QUALITY_IMPROVEMENT_REPORT.md  FIX_SUPPLIER_NAME_DISPLAY.md  MESSAGE_PASSING_IMPLEMENTATION.md  MOQ_IMPLEMENTATION.md  MULTI_PRODUCT_DEPLOYMENT_SUCCESS.md  ODOO_INTEGRATION.md  ODOO_PDF_ATTACHMENT_GUIDE.md  REPOSITORY_CLEANUP_REPORT.md  REPOSITORY_CLEANUP_SUMMARY.md  REPOSITORY_CLEANUP_TODO.md  SEARCH_ANALYSIS_REPORT.md  SUPABASE_BRANCH_SETUP.md  TEST_STRATEGY_SEARCH_IMPLEMENTATION.md  VECTOR_SEARCH_SCHEMA_DESIGN.md  VENDOR_AUTO_UPDATE_FUNCTIONALITY.md  environment-setup.md  test-add-product.md  test-multi-product-query.md  unnamed-products-investigation.md
odoo-ingestion/: .env.template  BULK_PROCESSING_COMPLETE.md  DATA_INTEGRITY_SUMMARY.md  FINAL_BUSINESS_VALIDATION_REPORT.md  FINAL_IMPORT_SUMMARY.json  FINAL_VALIDATION_REPORT.md  HOW_TO_USE_INVENTORY_SCRIPTS.md  HOW_TO_USE_PRODUCT_MAPPING.md  IMPORT_SUMMARY.md  INVENTORY_ANALYSIS_SUMMARY.md  INVENTORY_MANAGEMENT.md  MISSION_COMPLETE.md  PRODUCT_MAPPING_SUMMARY.md  README.md  README_REVENUE_GENERATION.md  README_VALIDATION.md  RETURN_GENERATION_SUMMARY.md  TRANSACTION_GENERATION_COMPLETE.md  VALIDATION_SUMMARY.md  adjust_channel_distribution.py  analyze_generated_transactions.py  auto_generate_realistic.py  batch_customer_import.py  batch_import.py  batch_importer.py  boost_revenue.py  bulk_data_processor.py  bulk_processing_summary.json  channel_distribution_summary.md  channel_validator.py  check_all_products_inventory.py  check_and_fix.py  check_data_integrity.py  check_inventory.py  check_product_fields.py  check_real_revenue.py  complete_product_analysis_20250807_170534.json  complete_product_analysis_20250807_172037.json  complete_product_mapper.py  complete_return_generator.py  (+145 more)
odoo_mcp/: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  PRD_COMPLETION_STATUS.md  QUICKSTART.md  README.md  README_old.md  SOLUTION.md  odoo_mcp_examples.md  odoo_mcp_test_results.md  pyproject.toml  pytest.ini  requirements_analysis.md
odoo_mcp/.claude-flow/metrics/: performance.json  task-metrics.json
odoo_mcp/.claude/commands/02_context/: generate_rules.md
odoo_mcp/.claude/commands/05_review/: code_quality_review.md  debug.md
odoo_mcp/.claude/commands/09_refactor/: architectural_refactoring.md
odoo_mcp/architecture/: ADR-001-async-architecture.md  ADR-002-connection-pooling.md  ADR-003-type-safety.md  ADR-004-testing-strategy.md  C4_DIAGRAMS.md  SYSTEM_ARCHITECTURE.md  TECHNOLOGY_EVALUATION.md
odoo_mcp/docs/: API_REFERENCE.md  CLAUDE_DESKTOP_SETUP.md  TDD_SETUP.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
odoo_mcp/memory/agents/: README.md
odoo_mcp/memory/sessions/: README.md
odoo_mcp/odoo-mcp-agent/: .env.example  PROJECT_STRUCTURE.md  README.md  TOOL_USAGE_DEMO.md  launch_app.sh  mcp_agent.config.yaml  pyproject.toml  requirements.txt  run.sh  streamlit_app.py  streamlit_app_backup.py  streamlit_app_fixed.py  test_simple.py  test_streaming.py
odoo_mcp/src/: __init__.py
odoo_mcp/src/odoo_mcp/: __init__.py  __main__.py  config.py  connection.py  errors.py  prompts.py  resources.py  resources_old.py  server.py  tools.py  types.py
odoo_mcp/tests/: __init__.py  conftest.py  conftest_old.py
odoo_mcp/tests/e2e/: __init__.py  test_procurement_workflow.py
odoo_mcp/tests/integration/: __init__.py  test_odoo_connection.py
odoo_mcp/tests/unit/: __init__.py  test_config.py  test_connection.py  test_errors.py  test_server.py  test_setup.py  test_types.py
scripts/: README-import.md  check-false-product-names.py  check-product-eur-anf-8904.py  check-unnamed-products.py  check_odoo_min_quantities.py  config.js  create-comprehensive-supplier-relationships.py  create-more-purchase-orders.py  create-purchase-orders-quick.py  create-supplier-product-relationships.py  create-supplier-relationships-batch.py  create-supplier-relationships.py  create-supplier-relationships.sh  debug-edge-functions-puppeteer.js  debug-odoo-xml.py  deploy-edge-function.sh  find-page-not-found-products.py  fix-supplier-products-and-orders.py  populate-product-data.py  quick-moq-update.py  test-edge-function-auth.py  test-edge-function-debug.py  test-final-edge-function.py  test-inline-edge-function.py  test-is-supplier-field.py  test-odoo-direct.py  test-product-stock-fields.py  (+16 more)
(+965 files in other folders)
